ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
        - path: /frontend
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
        - path: /backend
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 80
